refactor(feed): 선호도 스코어링 시스템 DB Only 전환
- Redis Write-Back 제거: RedisUserInterestAdapter, RedisUserInterestScoreSyncJob, UserInterestScoreSyncTxService 삭제
- 행동 점수 적립: Redis HINCRBY → DB UPSERT, 가중치 10배 상향 (VIEW 1→10, LIKE 3→30, RESERVE 10→100)
- 스코어링 공식: 관심도 ln 스케일 + 최신성 반감기 1일→7일
- 카테고리 다양성 캡(max 3): 양성 피드백 루프 해소
- 세션별 셔플 시드 적용: 동일 세션 내 결과 일관성 보장
- 배치 감쇠 CHUNK_SIZE 1000 → 5000: lock wait 14ms 이내 유지

Co-Authored-By: Claude <noreply@anthropic.com>